# spacecorridor

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
backend/: API.md  README.md
backend/app/: __init__.py  config.py  data.py  diagnosis.py  explanations.py  main.py  recommendation.py  schemas.py  scoring.py  service.py
backend/data/: seed_data.json
backend/tests/: __init__.py  helpers.py  test_ai.py  test_api.py  test_domain.py
data/processed/: corridor_scores.json  corridors.json  no2_stats.json  ports.json  viirs_stats.json
pipeline/: config.py  run_pipeline.py  supabase_schema.sql
pipeline/loaders/: csv_exporter.py  supabase_loader.py
pipeline/processing/: corridor_builder.py  feature_builder.py  normalize.py
pipeline/sources/: oecd.py  satellite_proxy.py  wpi.py
processed_data/: corridor_features.csv  data_dictionary.md  port_features.csv
scripts/: compute_scores.py  process_no2.py  process_oecd.py  process_viirs.py  process_wpi.py  seed.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/methodology/: page.tsx
src/components/corridor/: bottleneck-card.tsx  corridor-detail.tsx  recommendation-card.tsx  score-bar-chart.tsx  score-radar.tsx
src/components/dashboard/: corridor-card.tsx  corridor-ranking.tsx  dashboard-shell.tsx  filters-bar.tsx  summary-cards.tsx
src/components/landing/: data-sources-section.tsx  (+3 more)
src/lib/: constants.ts  data.ts  mapbox-config.ts  scoring.ts
src/types/: index.ts
supabase/migrations/: 001_schema.sql
(+9 files in other folders)
